<resources>
    <string name="app_name">Hindu Gurukul</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="password1">Password (Min. 6 Char)</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="login">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name(Max. 15 Char)</string>
    <string name="sur_name">Surname</string>
    <string name="relation">Relation</string>
    <string name="email">Email</string>
    <string name="re_enter_passsword">Re-enter Passsword</string>
    <string name="re_enter_new_passsword">Re-enter New Passsword</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="terms_amp_conditions"><u>Terms &amp; conditions</u></string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_address">Address</string>
    <string name="resend_code">Resend Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_internet">No internet connection</string>
    <string name="try_again">Something went wrong.. Please try again</string>

<!--    <string name="dashboard_msg">&#x201c; जरुरतमंद की सेवा करना विश्वरुप भगवान की पूजा है।     - प्रितम मुनि &#x201d;-->
<!--    \n\n &#x201c; औषधि, शस्त्र (आयुध),विद्या,भक्त/शिष्य का परिक्षा/परिक्षण के परिणामो से निर्णित होता है कि वह कितने श्रेष्ठ/परिणामदायी/मूल्यवान है।         - प्रितम मुनि  &#x201d;-->
<!--    \n\n &#x201c; यदि आप सुख की कामना करते है तो याद रखे कि धर्मयुक्त कर्म करने से ही सुख की प्राप्ति होती है।           - प्रितम मुनि  &#x201d;-->
<!--    \n\n &#x201c; सर्वाधिक गलतियां हम आवेश और आवेग में करते है। आवेश आवेग को समझे और सहन करे, उसे भोगे नहीं, उससे भागे नहीं।         - प्रितम मुनि  &#x201d;-->
<!--    \n\n &#x201c; माया मोह की इच्छाएँ पूरी करते आयुष्य समाप्त हो जाता है, किन्तु ईच्छाएँ पूरी नहीं होती। विवेकी वह है कि जो माया मोह की ईच्छाओं का त्याग कर अपने जीवात्मा के कल्याण हेतु पुरुषार्थ करे।          - प्रितम मुनि  &#x201d;-->
<!--    \n\n &#x201c; महान कार्यो को सफल करने के लिए दो गुण आवश्यक है... (1)अनुशासन - आदेश - नियम का पूर्ण पालन करना। (2) समर्पण - चाहे कुछ भी हो... कार्य पूर्ण होने तक संपूर्ण समर्पण।       - प्रितम मुनि  &#x201d;</string>-->


    <string name="dashboard_msg">\t\t\t\tॐ.. भगवान लकुलीश जी के शिव संकल्प "सनातन संस्कृति पुनरुत्थान" द्वारा विश्व में शांति, निति, एकता की स्थापना अंतर्गत पूज्य प्रितम मुनिजी ने पुरातन गुरुकुल परंपरा को आधुनिक ज्ञान - विज्ञान सहित वर्तमान परिपेक्ष में आधुनिक सुविधाओं एवं टेक्नोलॉजी युक्त विद्यालय में छात्रों को देवी सरस्वती, लक्ष्मी, काली की शक्ति से संपन्न बनाने 108 "हिंदु गुरुकुल - लकुलीश सनातन संस्कृति विद्यापीठ" की स्थापना एवं अनेक "हिंदु गुरुकुल - लकुलीश सनातन संस्कृति विद्यालय" की स्थापना का निर्णय किया है। जिसके अंतर्गत प्रथम "हिंदु गुरुकुल - लकुलीश सनातन संस्कृति विद्यापीठ" का शुभारंभ 16/06/2024 को लकुलीशधाम, प्रितमपुरम, कायावरोहण में शुरु किया है।
        \n\n\t\t\t\t "हिंदु गुरुकुल - लकुलीश सनातन संस्कृति विद्यापीठ" का शिक्षण - प्रशिक्षण :- "हिंदु गुरुकुल" में हिंदु छात्रों को वातानुकूलित निवासीय व्यवस्था के साथ गौमाता के दुध घी युक्त सात्विक भोजन, वातानुकूलित स्मार्ट (डिजिटल स्क्रीन सहित) क्लासरुम, डिजीटल लाइब्रेरी, संस्कृत, हिंदी, अंग्रेजी भाषा शिक्षण के साथ अंग्रेजी माध्यम में आधुनिक शिक्षण, विज्ञान और कंप्यूटर ट्रेनिंग का उच्च कक्षा का प्रशिक्षण, संध्याकर्म, यज्ञ, योग, देवपूजन प्रशिक्षण, उपनिषद् - दर्शनशास्त्रों भगवद्गीता का अभ्यास,   राइफल शुटिंग, घुड़सवारी, तीरंदाजी, तैरना, मार्शल आर्ट, स्वसुरक्षा प्रशिक्षण, ग्रामीण खेल कंची (લખોટી), गिल्ली डंडा, सतोडिया, चिडी बल्ला, कबड्डी, खो-खो और आधुनिक खेल टेबल टेनिस, वॉलीबॉल, फूटबाल, बास्केटबाल, क्रिकेट, कैरम, चैस जैसे खेल का राष्ट्रीय और अंतरराष्ट्रीय मानकों अनुसार प्रशिक्षण, संगीत, नृत्य, चित्र इत्यादि कला और गृह उद्योग - लघु उद्योगों का प्रशिक्षण जैसे अनेकविध प्रकार के शिक्षण प्रशिक्षण का आयोजन किया जा रहा है।
    \n\n\t\t\t\t   हमें "हिंदु गुरुकुल" की आगे की कक्षाएँ एवं Science lab, Library, संगीत - नृत्य प्रशिक्षण, गुरुकुल के गुरुजनों और कर्मचारियों को मानद वेतन, रुटीन मेंटेनेंस व्यवस्था इत्यादि हेतु प्रतिमाह धनराशि की आवश्यकता है।
    \n\n\t\t\t\t आप सभी आत्मीयजन अपनी क्षमतानुसार 100, 500 ,1000, 10000, एक लाख, एक रुम निर्माण का दान... या ज्यादा दान देकर और दान दिलवाकर सहयोगी बनें। आप प्रति महीना कम से कम रुपए 100/- का "हिंदु गुरुकुल" को दान देने के अभियान में जुड़कर हमारे "हिंदु गुरुकुल" के संचालन में सहयोगी बनें।
    \n\n\t\t\t\t आप प्रतिमाह हिंदु गुरुकुल को कम से कम रुपए 100/- का दान Google Pay, Phone Pay, Bhim app, Online, Net Banking, Credit Card, Debit Card इत्यादि के द्वारा हमारे संस्था के A/C :- Lakulish Sanatan Sanskriti Prabodhan Abhiyan (Delhi) में भेज सकते हैं। आपका दान 80G के अनुसार कर मुक्त है।</string>

    <string name="slogan_1">&#x201c; जरुरतमंद की सेवा करना विश्वरुप भगवान की पूजा है।     - प्रितम मुनि &#x201d;</string>
    <string name="slogan_2">&#x201c; औषधि, शस्त्र (आयुध),विद्या,भक्त/शिष्य का परिक्षा/परिक्षण के परिणामो से निर्णित होता है कि वह कितने श्रेष्ठ/परिणामदायी/मूल्यवान है।         - प्रितम मुनि  &#x201d;</string>
    <string name="slogan_3">&#x201c; यदि आप सुख की कामना करते है तो याद रखे कि धर्मयुक्त कर्म करने से ही सुख की प्राप्ति होती है।           - प्रितम मुनि  &#x201d;</string>
    <string name="slogan_4">&#x201c; सर्वाधिक गलतियां हम आवेश और आवेग में करते है। आवेश आवेग को समझे और सहन करे, उसे भोगे नहीं, उससे भागे नहीं।         - प्रितम मुनि  &#x201d;</string>
    <string name="slogan_5">&#x201c; माया मोह की इच्छाएँ पूरी करते आयुष्य समाप्त हो जाता है, किन्तु ईच्छाएँ पूरी नहीं होती। विवेकी वह है कि जो माया मोह की ईच्छाओं का त्याग कर अपने जीवात्मा के कल्याण हेतु पुरुषार्थ करे।          - प्रितम मुनि  &#x201d;</string>
    <string name="slogan_6">&#x201c; महान कार्यो को सफल करने के लिए दो गुण आवश्यक है... (1)अनुशासन - आदेश - नियम का पूर्ण पालन करना। (2) समर्पण - चाहे कुछ भी हो... कार्य पूर्ण होने तक संपूर्ण समर्पण।       - प्रितम मुनि  &#x201d;</string>

    <string name="valid_mobile_number">Please Enter Valid Mobile Number of 10 digits.</string>
    <string name="valid_password">Please Enter Valid Password of at least 6 digits.</string>
    <string name="old_valid_password">Please Enter Valid Old Password of at least 6 digits.</string>
    <string name="new_valid_password">Please Enter Valid New Password of at least 6 digits.</string>
    <string name="confirm_valid_password">Please Enter Valid Confirm Password of at least 6 digits.</string>
    <string name="confirm_new_valid_password">Please Enter Valid Confirm New Password of at least 6 digits.</string>
    <string name="password_not_match">Both Passwords are not matched.</string>
    <string name="lbl_update_now">Update now</string>
    <string name="lbl_remind_me_later">Later</string>
    <string name="msg_mandatory_update">A new version of Lakulishdham App is now available. Please update the app to continue.</string>
    <string name="msg_update_available">A new version of Lakulishdham App is now available. By downloading the latest update you will get the latest features, improvements and bug fixes.</string>

    <string name="support_call">7405499034</string>
    <string name="support_email"><u>lakulishdham@gmail.com</u></string>
    <string name="support_web"><u>www.lakulishsanskriti.org</u></string>
    <string name="user_payment_cancelled">Payment is cancelled.</string>
</resources>