<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/create_new_account"
                android:textColor="@color/grey4"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edName"
                style="@style/EditTextStyle"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edName"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_edittext">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl91"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="5dp"
                    android:text="+91"
                    android:textColor="@color/grey3"
                    android:textSize="15sp"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edMobileNumber"
                    style="@style/EditTextStyle"
                    android:background="@android:color/transparent"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    tools:text="9724747950"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edEmail"
                style="@style/EditTextStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_mobile" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edCountry"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_edittext"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:hint="@string/select_country"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edState"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/select_state"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edCountry" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edDistrict"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/select_district"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edState" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edAddress"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/select_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edDistrict" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edPassword"
                style="@style/EditTextStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edRePassword"
                style="@style/EditTextStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/re_enter_passsword"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edPassword" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edReferBy"
                style="@style/EditTextStyle"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:hint="Referral's Name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edRePassword" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_refermobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edReferBy"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_edittext">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl911"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="5dp"
                    android:text="+91"
                    android:textColor="@color/grey3"
                    android:textSize="15sp"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edReferMobile"
                    style="@style/EditTextStyle"
                    android:background="@android:color/transparent"
                    android:hint="Referral's Mobile"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_refermobile">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chkTermsConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:paddingStart="16dp"
                    android:text="I agee with"
                    android:textColor="@color/grey5"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnSignin" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTermsConds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/grey5"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnSignin" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                style="@style/ButtonStyle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="REGISTER"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_terms" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

